compilateurMinCaml/tests/typechecking/valid/eq.ml
print_int (if 1 = 1 then 101 else 2)