compilateurMinCaml/tests/typechecking/invalid/LE.ml
print_int (if 1 <= true then 101 else 4)